[tool.poetry]
name = "list-dockerhub-tags"
version = "0.1.0"
description = ""
authors = ["Vladimir Salykin <neraverin@gmail.com>"]
readme = "README.md"
packages = [{include = "list_dockerhub_tags", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
